--- a/qihoo-360t7-imm.config
+++ b/qihoo-360t7-imm.config
@@ -1,9 +1,6 @@
-# 目标硬件配置（360T7/MT7981）
 CONFIG_TARGET_mediatek=y
 CONFIG_TARGET_mediatek_filogic=y
 CONFIG_TARGET_mediatek_filogic_DEVICE_qihoo_360t7=y
-
-# 基础编译配置
 CONFIG_DEVEL=y
 CONFIG_TOOLCHAINOPTS=y
 CONFIG_BUSYBOX_CUSTOM=y
@@ -24,49 +21,24 @@ CONFIG_KERNEL_DEVMEM=y
 # CONFIG_KERNEL_KEYS is not set
 # CONFIG_KERNEL_MEMCG_SWAP is not set
 CONFIG_KERNEL_NET_CLS_CGROUP=y
-
-# ===================== 新增 BBRv3 核心配置 =====================
-CONFIG_KERNEL_TCP_CONG_BBR3=y          # 启用BBRv3算法
-CONFIG_KERNEL_TCP_CONG_BBR=y           # 保留基础BBR支持（兼容）
-CONFIG_KERNEL_DEFAULT_TCP_CONG="bbr3"  # 设置默认TCP算法为BBRv3
-# BBRv3依赖的流量控制/队列管理模块
-CONFIG_KERNEL_NET_SCH_HTOP=y
-CONFIG_KERNEL_NET_SCH_CBQ=y
-CONFIG_KERNEL_NET_SCH_PRIO=y
-CONFIG_KERNEL_NET_SCH_MULTIQ=y
-CONFIG_KERNEL_NET_SCH_RED=y
-CONFIG_KERNEL_NET_SCH_SFQ=y
-CONFIG_KERNEL_NET_SCH_TBF=y
-CONFIG_KERNEL_NET_SCH_GRED=y
-CONFIG_KERNEL_NET_SCH_DSMARK=y
-CONFIG_KERNEL_NET_SCH_INGRESS=y
-CONFIG_KERNEL_NET_CLS_U32=y
-CONFIG_KERNEL_NET_CLS_ROUTE4=y
-CONFIG_KERNEL_NET_CLS_FW=y
-CONFIG_KERNEL_NET_CLS_RSVP=y
-CONFIG_KERNEL_NET_CLS_RSVP6=y
-CONFIG_KERNEL_NET_CLS_FLOW=y
-CONFIG_KERNEL_NET_EMATCH=y
-CONFIG_KERNEL_NET_EMATCH_CMP=y
-CONFIG_KERNEL_NET_EMATCH_NBYTE=y
-CONFIG_KERNEL_NET_EMATCH_U32=y
-CONFIG_KERNEL_NET_EMATCH_META=y
-CONFIG_KERNEL_NET_EMATCH_TEXT=y
-CONFIG_KERNEL_NET_CLS_ACT=y
-CONFIG_KERNEL_NET_ACT_POLICE=y
-CONFIG_KERNEL_NET_ACT_GACT=y
-CONFIG_KERNEL_NET_ACT_MIRRED=y
-CONFIG_KERNEL_NET_ACT_IPT=y
-CONFIG_KERNEL_NET_ACT_NAT=y
-CONFIG_KERNEL_NET_ACT_PEDIT=y
-CONFIG_KERNEL_NET_ACT_SIMP=y
-CONFIG_KERNEL_NET_ACT_SKBEDIT=y
-# ===================== BBRv3 配置结束 =====================
-
-# LuCI及系统优化配置
+# ========== 新增 BBRv3 核心内核依赖 ==========
+CONFIG_KERNEL_CGROUP_BPF=y
+CONFIG_KERNEL_BPF=y
+CONFIG_KERNEL_BPF_SYSCALL=y
+CONFIG_KERNEL_HAVE_EBPF_JIT=y
+CONFIG_KERNEL_BPF_JIT=y
+CONFIG_KERNEL_BPF_JIT_ALWAYS_ON=y
+CONFIG_KERNEL_NET_CLS_BPF=y
+CONFIG_KERNEL_NET_ACT_BPF=y
+CONFIG_KERNEL_BPF_STREAM_PARSER=y
+CONFIG_KERNEL_LWTUNNEL_BPF=y
+CONFIG_KERNEL_BPF_EVENTS=y
+# 启用 BBRv3 拥塞控制算法
+CONFIG_KERNEL_TCP_CONG_BBR3=y
+# 设置默认 TCP 拥塞算法为 BBRv3
+CONFIG_KERNEL_DEFAULT_TCP_CONG="bbr3"
+# ========== BBRv3 依赖结束 ==========
 CONFIG_LUCI_SRCDIET=y
-
-# MT7981无线驱动核心配置
 CONFIG_MTK_ACK_CTS_TIMEOUT_SUPPORT=y
 CONFIG_MTK_AIR_MONITOR=y
 CONFIG_MTK_AMPDU_CONF_SUPPORT=y
@@ -159,18 +131,26 @@ CONFIG_MTK_WSC_INCLUDED=y
 CONFIG_MTK_WSC_V2_SUPPORT=y
 # CONFIG_OPENSSL_PREFER_CHACHA_OVER_GCM is not set
 CONFIG_OPENSSL_WITH_NPN=y
-
-# 软件包配置
+CONFIG_OPENVPN_openssl_ENABLE_DCO=y
+CONFIG_OPENVPN_openssl_ENABLE_FRAGMENT=y
+CONFIG_OPENVPN_openssl_ENABLE_LZ4=y
+CONFIG_OPENVPN_openssl_ENABLE_LZO=y
+CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
+CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
+CONFIG_PACKAGE_appfilter=y
 CONFIG_PACKAGE_blockd=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_cloudflared=y
 CONFIG_PACKAGE_datconf=y
 CONFIG_PACKAGE_datconf-lua=y
+CONFIG_PACKAGE_ddns-scripts=y
+CONFIG_PACKAGE_ddns-scripts-services=y
 CONFIG_PACKAGE_ebtables-legacy=y
 CONFIG_PACKAGE_ebtables-legacy-utils=y
 CONFIG_PACKAGE_etherwake=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_ip-bridge=y
+CONFIG_PACKAGE_ip-tiny=y
 CONFIG_PACKAGE_ip6tables-extra=y
 CONFIG_PACKAGE_ip6tables-nft=y
 CONFIG_PACKAGE_ipset=y
@@ -242,9 +222,10 @@ CONFIG_PACKAGE_kmod-nls-base=y
 CONFIG_PACKAGE_kmod-nls-cp437=y
 CONFIG_PACKAGE_kmod-nls-iso8859-1=y
 CONFIG_PACKAGE_kmod-nls-utf8=y
+CONFIG_PACKAGE_kmod-oaf=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-scsi-core=y
-CONFIG_PACKAGE_kmod-tcp-bbr=y  # 保留基础BBR模块（BBRv3依赖）
+CONFIG_PACKAGE_kmod-tcp-bbr=y
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-warp=y
 CONFIG_PACKAGE_kmod-zram=y
@@ -260,6 +241,8 @@ CONFIG_PACKAGE_libiptext=y
 CONFIG_PACKAGE_libiptext-nft=y
 CONFIG_PACKAGE_libiptext6=y
 CONFIG_PACKAGE_libkvcutil=y
+CONFIG_PACKAGE_liblz4=y
+CONFIG_PACKAGE_liblzo=y
 CONFIG_PACKAGE_libncurses=y
 CONFIG_PACKAGE_libnl=y
 CONFIG_PACKAGE_libnl-cli=y
@@ -299,12 +282,23 @@ CONFIG_PACKAGE_luci-app-turboacc-mtk=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-wol=y
 CONFIG_PACKAGE_luci-app-wrtbwmon=y
+# ========== 新增 BBRv3 插件及中文界面 ==========
+CONFIG_PACKAGE_bbr3=y
+CONFIG_PACKAGE_luci-app-bbr3=y
+CONFIG_PACKAGE_luci-i18n-bbr3-zh-cn=y
+# ========== BBRv3 插件结束 ==========
+CONFIG_PACKAGE_luci-i18n-appfilter-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-arpbind-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-cloudflared-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-eqos-mtk-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-eqos-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mtwifi-cfg-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-openvpn-server-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-taskplan-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-timecontrol-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-turboacc-mtk-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-wol-zh-cn=y
@@ -319,6 +313,8 @@ CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_openssh-keygen=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_openssl-util=y
+CONFIG_PACKAGE_openvpn-easy-rsa=y
+CONFIG_PACKAGE_openvpn-openssl=y
 CONFIG_PACKAGE_regs=y
 CONFIG_PACKAGE_resolveip=y
 CONFIG_PACKAGE_switch=y
